change the links because github pages links didn't work 2

--- a/about-us.html
+++ b/about-us.html
@@ -17,10 +17,10 @@
       <nav>
         <h1>LOGO</h1>
         <ul>
-          <li><a href="/brief2/index.html">Home</a></li>
-          <li><a href="/brief2/about-us.html" class="active">About us </a></li>
-          <li><a href="/brief2/services.html">Services</a></li>
-          <li><a href="/brief2/plans.html">Our plans</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about-us.html" class="active">About us </a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./plans.html">Our plans</a></li>
           <li><a href="#contact" class="btn3">Contact us</a></li>
         </ul>
       </nav>
