--- a/plans.html
+++ b/plans.html
@@ -21,10 +21,10 @@
       <nav>
         <h1>LOGO</h1>
         <ul>
-          <li><a href="/brief2/index.html">Home</a></li>
-          <li><a href="/brief2/about-us.html">About us </a></li>
-          <li><a href="/brief2/services.html">Services</a></li>
-          <li><a href="/brief2/plans.html" class="active">Our plans</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about-us.html">About us </a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./plans.html" class="active">Our plans</a></li>
           <li><a href="" class="btn3">Contact us</a></li>
         </ul>
       </nav>
